# probabilistic_model_examples

./: README.md
docs/: CholeskyDecomposition.md  JordanFormOfAMatrix.md  PseudoInverseOfMatrix.md  SingularValueDecomposition.md
src/gaussian-processes/: pyproject.toml
src/gaussian-processes/gaussian_processes/: gaussian_process_prior_example.py
src/gaussian-processes/tests/: test_gaussian_processes.py
